--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,18 +2,14 @@ trigger:
   - '*'
   
 pool:
-    vmImage: 'ubuntu-16.04'
-    demands:
+  vmImage: 'ubuntu-16.04'
+  demands:
     - npm
-  
-variables:
-    buildConfiguration: 'Release'
   
 steps:
 - task: UseDotNet@2
   displayName: 'Use .NET Core SDK 3.1.100'
   inputs:
-    packageType: sdk
     version: 3.1.100
   
 - task: Npm@1
@@ -34,8 +30,8 @@ steps:
 - task: DotNetCoreCLI@2
   displayName: 'Restore project dependencies'
   inputs:
-    command: 'restore'
-    projects: '**/*.csproj'
+      command: 'restore'
+      projects: '**/*.csproj'
   
 - task: DotNetCoreCLI@2
   displayName: 'Build the project - Release'
@@ -43,3 +39,16 @@ steps:
       command: 'build'
       arguments: '--no-restore --configuration Release'
       projects: '**/*.csproj'
+  
+- task: DotNetCoreCLI@2
+  displayName: 'Publish the project - Release'
+  inputs:
+      command: 'publish'
+      projects: '**/*.csproj'
+      publishWebProjects: false
+      arguments: '--no-build --configuration Release --output $(Build.ArtifactStagingDirectory)/Release'
+      zipAfterPublish: true
+  
+- task: PublishBuildArtifacts@1
+  displayName: 'Publish Artifact: drop'
+  condition: succeeded()
